--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,9 @@ jobs:
       contents: read
 
     steps:
+    - name: Hello Var
+      run: echo "${{ env.GOOGLE_SERVICES }}"
+        
     - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
