--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 # Project specific
+navigationCompose = "2.8.0-alpha10"
 sqlDelightVersion = "2.0.2"
 firebaseBom = "33.2.0"
 kotlinxCollectionsImmutable = "0.3.8"
@@ -56,6 +57,7 @@ firebaseCrashlyticsBuildtools = "3.0.2"
 [libraries]
 # Tests
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelightVersion" }
+navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" } # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html#sample-project
 sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelightVersion" }
 coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqlDelightVersion" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
