main: Updated project dependencies.

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ org.jetbrains.compose.experimental.jscanvas.enabled=true
 
 #Gradle Cache
 org.gradle.caching=true
-org.gradle.configuration-cache=true
+#org.gradle.configuration-cache=true
