--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,28 +11,29 @@ applicationId = "de.felixlf.gradingscale2"
 sqliteDriver = "2.0.2"
 versionCode = "1"
 versionName = "1.0"
+java = "17"
 
-agp = "8.6.0"
+agp = "8.6.1"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
-gradle = "8.2.2"
-androidx-activityCompose = "1.9.2"
+androidx-activityCompose = "1.9.3"
 androidx-appcompat = "1.7.0"
 androidx-constraintlayout = "2.1.4"
-androidx-core-ktx = "1.13.1"
+androidx-core-ktx = "1.15.0"
 androidx-espresso-core = "3.6.1"
-androidx-lifecycle = "2.8.0"
+androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
-android-desugar = "2.1.2"
+android-desugar = "2.1.3"
 compose-plugin = "1.7.1"
 junit = "4.13.2"
-kotlin = "2.0.20"
-java = "11"
+kotlin = "2.1.0"
+kotlin-compiler = "2.1.0"
+compose-reload = "1.0.0-dev.31.3"
 kotlinx-coroutines = "1.9.0"
 kotlinx-dateTime = "0.6.0"
-koin = "4.0.0-RC2"
+koin = "4.0.0"
 ktor = "2.3.12"
 ktlintGradle = "12.1.1" # https://github.com/JLLeitschuh/ktlint-gradle/releases
 gmazzoBuildConfig = "5.4.0" # https://github.com/gmazzo/gradle-buildconfig-plugin
@@ -42,7 +43,7 @@ turbineVersion = "1.2.0" # https://mvnrepository.com/artifact/app.cash.turbine/t
 
 # Room
 room = "2.7.0-alpha11"
-ksp = "2.0.20-1.0.25"
+ksp = "2.1.0-1.0.29"
 sqlite = "2.5.0-SNAPSHOT"
 
 sqlDelightPlugin = "2.0.2"
@@ -50,7 +51,6 @@ sqlDelightPlugin = "2.0.2"
 #Firebase
 firebase-kotlin = "2.1.0"
 google-services = "4.4.2"
-jetbrainsKotlinJvm = "1.9.0"
 firebaseCrashlyticsBuildtools = "3.0.2"
 
 
@@ -118,8 +118,8 @@ koin-compose-viewmodel-nav = { module = "io.insert-koin:koin-compose-viewmodel-n
 # Plugins for buildSrc see: https://discuss.gradle.org/t/using-version-catalogs-with-precompiled-script-plugins/45417
 gradle-agp = { module = "com.android.tools.build:gradle", version.ref = "agp" } # https://maven.google.com/web/index.html#com.android.tools.build:gradle
 gradle-jetbrainsCompose = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose-plugin" } # https://plugins.gradle.org/plugin/org.jetbrains.compose
-gradle-compose-compiler = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.compose
-gradle-kotlinMultiplatform = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.multiplatform
+gradle-compose-compiler = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin-compiler" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.compose
+gradle-kotlinMultiplatform = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-compiler" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.multiplatform
 gradle-room = { module = "androidx.room:room-gradle-plugin", version.ref = "room" } # https://maven.google.com/web/index.html#androidx.room:room-gradle-plugin
 gradle-ksp = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" } # https://maven.google.com/web/index.html#com.google.devtools.ksp
 gradle-google-services = { module = "com.google.gms.google-services:com.google.gms.google-services.gradle.plugin", version.ref = "google-services" } # https://maven.google.com/web/index.html#com.google.gms.google-services:com.google.gms.google-services.gradle.plugin
@@ -129,21 +129,21 @@ gradle-aboutLibraries = { module = "com.mikepenz.aboutlibraries.plugin:aboutlibr
 gradle-sonarqube = { module = "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin", version.ref = "sonarqubeGradlePlugin" } # https://plugins.gradle.org/plugin/org.sonarqube
 gradle-firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" } # https://maven.google.com/web/index.html#com.google.firebase:firebase-crashlytics-buildtools
 gradle-sqldelight = { group = "app.cash.sqldelight", name = "app.cash.sqldelight.gradle.plugin", version.ref = "sqlDelightPlugin" } # https://oss.sonatype.org/#nexus-search;quick~sqldelight
-
+gradle-hotreload = { group = "org.jetbrains.compose-hot-reload", name = "org.jetbrains.compose-hot-reload.gradle.plugin", version.ref = "compose-reload"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" } # https://mvnrepository.com/artifact/org.jetbrains.compose/org.jetbrains.compose.gradle.plugin
-kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin-compiler" } # https://mvnrepository.com/artifact/org.jetbrains.compose/org.jetbrains.compose.gradle.plugin
+kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin-compiler" }
 room = { id = "androidx.room", version.ref = "room" }#
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsBuildtools"}
 kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 gmazzoBuildConfig = { id = "com.github.gmazzo.buildconfig", version.ref = "gmazzoBuildConfig" }
 aboutLibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutLibraries" }
 sonarqube = { id = "org.sonarqube", version.ref = "sonarqubeGradlePlugin" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelightPlugin" }
+hot-reload = { id = "org.jetbrains.compose-hot-reload", version.ref = "compose-reload"}
