--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,10 +15,10 @@ versionCode = "1"
 versionName = "1.0"
 java = "17"
 
-agp = "8.6.1"
-android-compileSdk = "34"
+agp = "8.7.3"
+android-compileSdk = "35"
 android-minSdk = "24"
-android-targetSdk = "34"
+android-targetSdk = "35"
 androidx-activityCompose = "1.9.3"
 androidx-appcompat = "1.7.0"
 androidx-constraintlayout = "2.1.4"
@@ -28,7 +28,7 @@ androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
 android-desugar = "2.1.3"
-compose-plugin = "1.7.1"
+compose-plugin = "1.8.0-alpha01"
 junit = "4.13.2"
 kotlin = "2.1.0"
 kotlin-compiler = "2.1.0"
@@ -44,7 +44,7 @@ sonarqubeGradlePlugin = "5.1.0.4882"
 turbineVersion = "1.2.0" # https://mvnrepository.com/artifact/app.cash.turbine/turbine
 
 # Room
-room = "2.7.0-alpha11"
+room = "2.7.0-alpha12"
 ksp = "2.1.0-1.0.29"
 sqlite = "2.5.0-SNAPSHOT"
 
@@ -54,6 +54,8 @@ sqlDelightPlugin = "2.0.2"
 firebase-kotlin = "2.1.0"
 google-services = "4.4.2"
 firebaseCrashlyticsBuildtools = "3.0.2"
+foundationAndroid = "1.7.6"
+material3Android = "1.3.1"
 
 
 [libraries]
@@ -134,6 +136,9 @@ gradle-sonarqube = { module = "org.sonarsource.scanner.gradle:sonarqube-gradle-p
 gradle-firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" } # https://maven.google.com/web/index.html#com.google.firebase:firebase-crashlytics-buildtools
 gradle-sqldelight = { group = "app.cash.sqldelight", name = "app.cash.sqldelight.gradle.plugin", version.ref = "sqlDelightPlugin" } # https://oss.sonatype.org/#nexus-search;quick~sqldelight
 gradle-hotreload = { group = "org.jetbrains.compose-hot-reload", name = "org.jetbrains.compose-hot-reload.gradle.plugin", version.ref = "compose-reload"}
+androidx-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "foundationAndroid" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+web-worker-driver = { module = "app.cash.sqldelight:web-worker-driver", version.ref = "sqlDelightVersion" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
