--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,7 +29,7 @@ androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
 android-desugar = "2.1.3"
-compose-plugin = "1.8.0-alpha01"
+compose-plugin = "1.7.3"
 junit = "4.13.2"
 kotlin = "2.1.0"
 kotlin-compiler = "2.1.0"
