--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,8 +32,8 @@ androidx-test-junit = "1.2.1"
 android-desugar = "2.1.3"
 compose-plugin = "1.7.3"
 junit = "4.13.2"
-kotlin = "2.1.0"
-kotlin-compiler = "2.1.0"
+kotlin = "2.1.20-RC"
+kotlin-compiler = "2.1.20-RC"
 compose-reload = "1.0.0-dev.31.3"
 kotlinx-coroutines = "1.9.0"
 kotlinx-dateTime = "0.6.0"
@@ -47,7 +47,7 @@ turbineVersion = "1.2.0" # https://mvnrepository.com/artifact/app.cash.turbine/t
 
 # Room
 room = "2.7.0-alpha12"
-ksp = "2.1.0-1.0.29"
+ksp = "2.1.20-RC-1.0.30"
 sqlite = "2.5.0-SNAPSHOT"
 
 sqlDelightPlugin = "2.0.2"
