main: refactor: Update dependencies and move TestDispatcherProvider to entities
This commit updates project dependencies and moves the `TestDispatcherProvider` to the `entities` module for better test code organization.

-   **Moved:** `TestDispatcherProvider` from `composeApp` to `entities` module.
-   **Updated:** Kotlin version to `2.1.20`.
-   **Updated:** Kotlin compiler version to `2.1.20`.
-   **Updated:** Compose plugin to `1.8.0-beta01`.
-   **Updated:** Compose reload to `1.0.0-alpha03`.
-   **Updated:** Coroutines to `1.10.1`.
-   **Updated:** Koin to `4.0.4`.
-   **Updated:** Ktor to `2.3.12`.
-   **Updated:** AGP to `8.9.1`.
-   **Updated:** androidx-activityCompose to `1.10.1`.
-   **Updated:** androidx.lifecycle to `2.8.4`.
-   **Updated:** ktlintGradle to `12.2.0`.
-   **Updated:** Room to `2.7.0-rc03`.
-   **Updated:** ksp to `2.1.20-1.0.32`.
-   **Updated:** kotlinxSerialization to `1.8.1`.
-   **Updated:** firebaseCrashlyticsBuildtools to `3.0.3`.
-   **Updated:** foundationAndroid to `1.7.8`.
-   **Updated:** multiplatformSettingsNoArg to `1.3.0`.
-   **Updated:** sonarqubeGradlePlugin to `6.1.0.5360`
-   **Updated:** navigationCompose to `2.8.0-alpha13`.
-   **Updated:** foojay-resolver-convention to `0.9.0`.
-   **Updated:** Removed the unused `compose` in the `composeApp` build.gradle file.
-   **Updated:** Added `entities` dependency to `composeApp/jvmTest`.
-   **Updated:** Updated imports in `EditGradeViewModelTest` to reflect changes.
-   **Updated:** Updated import of `TestDispatcherProvider` to the new location.
-   **Refactored:** Updated the moleculeState function to not have an unused context param.
-   **Refactored:** Removed duplicated `StandardTestDispatcher` creation.
-   **Fixed:** Corrected test dependencies.
-   **Fixed:** Replaced the TestDispatcherProvider with the correct one in `EditGradeViewModelTest`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,11 +4,11 @@ arrowCore = "2.0.1"
 material3AdaptiveNavigationSuite = "1.7.3"
 moleculeRuntime = "2.0.0"
 napier = "2.7.1"
-navigationCompose = "2.8.0-alpha10"
+navigationCompose = "2.8.0-alpha13"
 sqlDelightVersion = "2.0.2"
-firebaseBom = "33.2.0"
+firebaseBom = "33.12.0"
 kotlinxCollectionsImmutable = "0.3.8"
-multiplatformSettingsNoArg = "1.2.0"
+multiplatformSettingsNoArg = "1.3.0"
 nativeDriver = "2.0.2"
 packagename = "de.felixlf.gradingscale"
 applicationId = "de.felixlf.gradingscale2"
@@ -17,11 +17,11 @@ versionCode = "1"
 versionName = "1.0"
 java = "17"
 
-agp = "8.9.0"
+agp = "8.9.1"
 android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "35"
-androidx-activityCompose = "1.9.3"
+androidx-activityCompose = "1.10.1"
 androidx-appcompat = "1.7.0"
 androidx-constraintlayout = "2.1.4"
 androidx-core-ktx = "1.15.0"
@@ -29,36 +29,38 @@ androidx-espresso-core = "3.6.1"
 androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
-android-desugar = "2.1.3"
-compose-plugin = "1.7.3"
+android-desugar = "2.1.5"
+compose-plugin = "1.8.0-beta01"
 junit = "4.13.2"
-kotlin = "2.1.20-RC"
-kotlin-compiler = "2.1.20-RC"
-compose-reload = "1.0.0-dev-62"
-kotlinx-coroutines = "1.9.0"
+kotlin = "2.1.20"
+kotlin-compiler = "2.1.20"
+compose-reload = "1.0.0-alpha03"
+kotlinx-coroutines = "1.10.1"
 kotlinx-dateTime = "0.6.0"
-koin = "4.0.0"
+koin = "4.0.4"
 ktor = "2.3.12"
 ktlintGradle = "12.1.1" # https://github.com/JLLeitschuh/ktlint-gradle/releases
+# TODO: Cannot update to 5.6.0 and aboutlibraries, due the incompatibility with the Kotlin version
 gmazzoBuildConfig = "5.4.0" # https://github.com/gmazzo/gradle-buildconfig-plugin
 aboutLibraries = "11.1.4" # https://github.com/mikepenz/AboutLibraries/releases
-sonarqubeGradlePlugin = "5.1.0.4882"
+
+sonarqubeGradlePlugin = "6.1.0.5360"
 turbineVersion = "1.2.0" # https://mvnrepository.com/artifact/app.cash.turbine/turbine
 
 # Room
-room = "2.7.0-alpha12"
-ksp = "2.1.20-RC-1.0.30"
+room = "2.7.0-rc03"
+ksp = "2.1.20-1.0.32"
 sqlite = "2.5.0-SNAPSHOT"
 
 sqlDelightPlugin = "2.0.2"
 kstore = "0.9.1"
-kotlinxSerialization = "1.8.0"
+kotlinxSerialization = "1.8.1"
 
 #Firebase
 firebase-kotlin = "2.1.0"
 google-services = "4.4.2"
-firebaseCrashlyticsBuildtools = "3.0.2"
-foundationAndroid = "1.7.6"
+firebaseCrashlyticsBuildtools = "3.0.3"
+foundationAndroid = "1.7.8"
 
 
 [libraries]
