--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ arrowCore = "2.0.1"
 material3AdaptiveNavigationSuite = "1.7.3"
 moleculeRuntime = "2.0.0"
 napier = "2.7.1"
-navigationCompose = "2.8.0-alpha13"
+navigationCompose = "2.8.0-alpha10"
 sqlDelightVersion = "2.0.2"
-firebaseBom = "33.12.0"
+firebaseBom = "33.2.0"
 kotlinxCollectionsImmutable = "0.3.8"
 multiplatformSettingsNoArg = "1.3.0"
 nativeDriver = "2.0.2"
@@ -30,7 +30,7 @@ androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
 android-desugar = "2.1.5"
-compose-plugin = "1.8.0-beta01"
+compose-plugin = "1.7.3"
 junit = "4.13.2"
 kotlin = "2.1.20"
 kotlin-compiler = "2.1.20"
