main: feat: Added grade scales from json file and removed mock grade scales
- Implemented `GradeScaleGenerator` interface for generating grade scales.
- Added `ResourceGradeScaleGenerator` to load grade scales from a JSON file in resources.
- Replaced `MockGradeScalesGenerator` with `ResourceGradeScaleGenerator` for loading real-world grade scales.
- Added `grade_in_scale.json` with diverse grade scales from various countries and contexts.
- Adjusted `GetAllGradeScalesUseCase` to use `GradeScaleGenerator` for initial grade scale loading.
- Minor updates to `.editorconfig` and `Theme.kt` for improved code style and consistency.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,12 @@
 [**/generated/**/*]
-ktlint = disabled
+ktlint = enabled
 
 [*]
 charset = utf-8
 indent_size = 4
 indent_style = space
 insert_final_newline = true
-max_line_length = 100
+max_line_length = 140
 tab_width = 4
 ij_continuation_indent_size = 8
 
@@ -17,7 +17,6 @@ ktlint_code_style = android_studio
 ktlint_standard_discouraged-comment-location=disabled
 ktlint_ignore_back_ticked_identifier = true
 
-max_line_length = 140
 ij_kotlin_align_in_columns_case_branch = false
 ij_kotlin_align_multiline_binary_operation = false
 ij_kotlin_align_multiline_extends_list = false
