--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 # Project specific
+appdirs = "1.4.0"
 arrowCore = "2.0.1"
 material3AdaptiveNavigationSuite = "1.7.3"
 moleculeRuntime = "2.1.0"
@@ -10,6 +11,7 @@ firebaseBom = "33.2.0"
 kotlinxCollectionsImmutable = "0.3.8"
 multiplatformSettingsNoArg = "1.3.0"
 nativeDriver = "2.0.2"
+organization = "de.felixlf"
 packagename = "de.felixlf.gradingscale"
 applicationId = "de.felixlf.gradingscale2"
 sqliteDriver = "2.0.2"
@@ -61,6 +63,7 @@ conveyorVersion = "1.12"
 
 [libraries]
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelightVersion" }
+appdirs = { module = "net.harawata:appdirs", version.ref = "appdirs" }
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrowCore" }
 arrow-optics = { module = "io.arrow-kt:arrow-optics", version.ref = "arrowCore" }
 arrow-optics-ksp-plugin = { module = "io.arrow-kt:arrow-optics-ksp-plugin", version.ref = "arrowCore" }
@@ -108,6 +111,7 @@ sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "s
 sqljs-driver = { module = "app.cash.sqldelight:sqljs-driver", version.ref = "sqliteDriver" }
 kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
 kstore-storage = { module = "io.github.xxfast:kstore-storage", version.ref = "kstore" }
+kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
 
 # Firebase
 firebase-auth = { group = "dev.gitlive", name = "firebase-auth", version.ref = "firebase-kotlin" }
