main: Refactor: Improve UI and add divider to Dropbox, update layout for list and import features
- Add a horizontal divider to `DropboxSelector` for better separation of items.
- Disable `matchTextFieldWidth` for `DropdownMenu` for more flexible width.
- Improve layout and readability in `ImportGradeScalesList`, using cards for sticky headers and adding padding.
- Adjust `GradeScaleListScreen` layout to make the `CalculatorTextField` a relative width.
- Added vertical padding to `GradeScaleItem`
- Activate Gradle cache.
- Remove unnecessary code.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,29 +1,23 @@
 kotlin.code.style=official
-
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4096M"
 org.gradle.parallel=true
-
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 android.experimental.enableTestFixturesKotlinSupport=true
-
 #Kotlin Multiplatform
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.incremental=false
 kotlin.native.cacheKind=none
 kotlin.daemon.jvmargs=-Xmx4G
-
 # Enable experimental Compose features
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.uikit.enabled=true
-
 #Gradle Cache
-org.gradle.caching=false
+org.gradle.caching=true
 #org.gradle.configuration-cache=true
-
 # Disable some features to help with troubleshooting
 kotlin.native.ignoreDisabledTargets=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
