--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,64 +1,64 @@
 [versions]
 # Project specific
-appdirs = "1.4.0"
-arrowCore = "2.0.1"
-material3AdaptiveNavigationSuite = "1.7.3"
-moleculeRuntime = "2.1.0"
-napier = "2.7.1"
-navigationCompose = "2.8.0-alpha10"
-sqlDelightVersion = "2.0.2"
-firebaseBom = "33.2.0"
-kotlinxCollectionsImmutable = "0.3.8"
-multiplatformSettingsNoArg = "1.3.0"
-nativeDriver = "2.0.2"
-organization = "de.felixlf"
-packagename = "de.felixlf.gradingscale"
-applicationId = "de.felixlf.gradingscale2"
-sqliteDriver = "2.0.2"
-versionCode = "1"
-versionName = "1.0"
-java = "17"
+appdirs = "1.4.0" # https://github.com/harawata/appdirs/releases
+arrowCore = "2.1.2" # https://github.com/arrow-kt/arrow/releases
+material3AdaptiveNavigationSuite = "1.8.1" # https://github.com/JetBrains/compose-multiplatform/releases
+moleculeRuntime = "2.1.0" # https://github.com/cashapp/molecule/releases
+napier = "2.7.1" # https://github.com/AAkira/Napier/releases - 2.8.1 exists but not for JS target (May 21, 2025)
+navigationCompose = "2.8.0-alpha13" # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html
+sqlDelightVersion = "2.1.0" # https://github.com/cashapp/sqldelight/releases
+firebaseBom = "33.14.0" # https://firebase.google.com/support/release-notes/android
+kotlinxCollectionsImmutable = "0.4.0" # https://github.com/Kotlin/kotlinx.collections.immutable/releases
+multiplatformSettingsNoArg = "1.3.0" # https://github.com/russhwolf/multiplatform-settings/releases
+nativeDriver = "2.1.0" # https://github.com/cashapp/sqldelight/releases
+organization = "de.felixlf" # Project specific
+packagename = "de.felixlf.gradingscale" # Project specific
+applicationId = "de.felixlf.gradingscale2" # Project specific
+sqliteDriver = "2.1.0" # https://github.com/cashapp/sqldelight/releases
+versionCode = "1" # Project specific
+versionName = "1.0" # Project specific
+java = "17" # Java version
 
-agp = "8.10.0"
-android-compileSdk = "36"
-android-minSdk = "24"
-android-targetSdk = "36"
-androidx-activityCompose = "1.10.1"
-androidx-appcompat = "1.7.0"
-androidx-core-ktx = "1.15.0"
-androidx-espresso-core = "3.6.1"
-androidx-lifecycle = "2.8.4"
-androidx-test-junit = "1.2.1"
-android-desugar = "2.1.5"
-compose-plugin = "1.8.0"
-junit = "4.13.2"
-kotlin = "2.1.20"
-kotlin-compiler = "2.1.20"
-compose-reload = "1.0.0-alpha09"
-kotlinx-coroutines = "1.10.2"
-kotlinx-dateTime = "0.6.0"
-koin = "4.0.4"
-ktor = "2.3.12"
+agp = "8.10.0" # https://developer.android.com/build/releases/gradle-plugin
+android-compileSdk = "36" # https://developer.android.com/tools/releases/platforms
+android-minSdk = "24" # https://developer.android.com/tools/releases/platforms
+android-targetSdk = "36" # https://developer.android.com/tools/releases/platforms
+androidx-activityCompose = "1.10.1" # https://developer.android.com/jetpack/androidx/releases/activity
+androidx-appcompat = "1.7.0" # https://developer.android.com/jetpack/androidx/releases/appcompat
+androidx-core-ktx = "1.16.0" # https://developer.android.com/jetpack/androidx/releases/core
+androidx-espresso-core = "3.6.1" # https://developer.android.com/jetpack/androidx/releases/test
+androidx-lifecycle = "2.9.0" # https://developer.android.com/jetpack/androidx/releases/lifecycle
+androidx-test-junit = "1.2.1" # https://developer.android.com/jetpack/androidx/releases/test
+android-desugar = "2.1.5" # https://maven.google.com/web/index.html#com.android.tools:desugar_jdk_libs
+compose-plugin = "1.8.1" # https://github.com/JetBrains/compose-multiplatform/releases
+junit = "4.13.2" # https://github.com/junit-team/junit4/releases
+kotlin = "2.1.21" # https://github.com/JetBrains/kotlin/releases
+kotlin-compiler = "2.1.21" # https://github.com/JetBrains/kotlin/releases
+compose-reload = "1.0.0-alpha10" # https://github.com/JetBrains/compose-multiplatform/releases
+kotlinx-coroutines = "1.10.2" # https://github.com/Kotlin/kotlinx.coroutines/releases
+kotlinx-dateTime = "0.6.0" # https://github.com/Kotlin/kotlinx-datetime/releases
+koin = "4.0.4" # https://insert-koin.io/ - 4.0.6 exists but not for JS target (May 21, 2025)
+ktor = "2.3.12" # https://github.com/ktorio/ktor/releases
 # TODO: Cannot update to 5.6.0 and aboutlibraries, due the incompatibility with the Kotlin version
-gmazzoBuildConfig = "5.4.0" # https://github.com/gmazzo/gradle-buildconfig-plugin
+gmazzoBuildConfig = "5.4.0" # https://github.com/gmazzo/gradle-buildconfig-plugin/releases
 aboutLibraries = "11.1.4" # https://github.com/mikepenz/AboutLibraries/releases
 
-sonarqubeGradlePlugin = "6.1.0.5360"
-turbineVersion = "1.2.0" # https://mvnrepository.com/artifact/app.cash.turbine/turbine
+sonarqubeGradlePlugin = "6.1.0.5360" # https://github.com/SonarSource/sonar-scanner-gradle/releases
+turbineVersion = "1.2.0" # https://github.com/cashapp/turbine/releases
 
-ksp = "2.1.20-1.0.32"
-sqlDelightPlugin = "2.0.2"
-kstore = "0.9.1"
-kotlinxSerialization = "1.8.1"
+ksp = "2.1.21-2.0.1" # https://github.com/google/ksp/releases
+sqlDelightPlugin = "2.1.0" # https://github.com/cashapp/sqldelight/releases
+kstore = "0.9.1" # https://github.com/xxfast/KStore/releases
+kotlinxSerialization = "1.8.1" # https://github.com/Kotlin/kotlinx.serialization/releases
 
 #Firebase
-firebase-kotlin = "2.1.0"
-google-services = "4.4.2"
-firebaseCrashlyticsBuildtools = "3.0.3"
-foundationAndroid = "1.7.8"
-coreKtx = "1.16.0"
+firebase-kotlin = "2.1.0" # https://github.com/GitLiveApp/firebase-kotlin-sdk/releases
+google-services = "4.4.2" # https://developers.google.com/android/guides/google-services-plugin
+firebaseCrashlyticsBuildtools = "3.0.3" # https://firebase.google.com/support/release-notes/android
+foundationAndroid = "1.8.2" # https://developer.android.com/jetpack/androidx/releases/compose-foundation
+coreKtx = "1.16.0" # https://developer.android.com/jetpack/androidx/releases/core
 
-conveyorVersion = "1.12"
+conveyorVersion = "1.12" # https://github.com/hydraulic-software/conveyor/releases
 
 [libraries]
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelightVersion" }
