--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.iml
 .kotlin
 .gradle
+.claude
 **/build/
 xcuserdata
 !src/**/build/
@@ -18,3 +19,4 @@ captures
 **/xcshareddata/WorkspaceSettings.xcsettings
 /composeApp/google-services.json
 /iosApp/iosApp/GoogleService-Info.plist
+**/firebase-config.js
