--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 kotlin.code.style=official
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4096M"
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
-android.experimental.enableTestFixturesKotlinSupport=true
+android.experimental.enableTestFixturesKotlinSupport=false
 #Kotlin Multiplatform
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.incremental=false
 kotlin.native.cacheKind=none
-kotlin.daemon.jvmargs=-Xmx4G
+kotlin.daemon.jvmargs=-Xmx4096M
 # Enable experimental Compose features
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.uikit.enabled=true
