--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,11 +9,9 @@ sqlDelightVersion = "2.1.0" # https://github.com/cashapp/sqldelight/releases
 firebaseBom = "33.14.0" # https://firebase.google.com/support/release-notes/android
 kotlinxCollectionsImmutable = "0.4.0" # https://github.com/Kotlin/kotlinx.collections.immutable/releases
 multiplatformSettingsNoArg = "1.3.0" # https://github.com/russhwolf/multiplatform-settings/releases
-nativeDriver = "2.1.0" # https://github.com/cashapp/sqldelight/releases
 organization = "de.felixlf" # Project specific
 packagename = "de.felixlf.gradingscale" # Project specific
 applicationId = "de.felixlf.gradingscale2" # Project specific
-sqliteDriver = "2.1.0" # https://github.com/cashapp/sqldelight/releases
 versionCode = "1" # Project specific
 versionName = "1.0" # Project specific
 java = "17" # Java version
@@ -32,12 +30,11 @@ android-desugar = "2.1.5" # https://maven.google.com/web/index.html#com.android.
 compose-plugin = "1.8.1" # https://github.com/JetBrains/compose-multiplatform/releases
 junit = "4.13.2" # https://github.com/junit-team/junit4/releases
 kotlin = "2.1.21" # https://github.com/JetBrains/kotlin/releases
-kotlin-compiler = "2.1.21" # https://github.com/JetBrains/kotlin/releases
 compose-reload = "1.0.0-alpha10" # https://github.com/JetBrains/compose-multiplatform/releases
 kotlinx-coroutines = "1.10.2" # https://github.com/Kotlin/kotlinx.coroutines/releases
 kotlinx-dateTime = "0.6.0" # https://github.com/Kotlin/kotlinx-datetime/releases
 koin = "4.0.4" # https://insert-koin.io/ - 4.0.6 exists but not for JS target (May 21, 2025)
-ktor = "2.3.12" # https://github.com/ktorio/ktor/releases
+ktor = "3.0.0" # https://github.com/ktorio/ktor/releases - 3.0.0+ supports WasmJS
 # TODO: Cannot update to 5.6.0 and aboutlibraries, due the incompatibility with the Kotlin version
 gmazzoBuildConfig = "5.4.0" # https://github.com/gmazzo/gradle-buildconfig-plugin/releases
 aboutLibraries = "11.1.4" # https://github.com/mikepenz/AboutLibraries/releases
@@ -104,9 +101,9 @@ kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 
 # Persistence
 multiplatform-settings-no-arg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "multiplatformSettingsNoArg" }
-native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "nativeDriver" }
-sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqliteDriver" }
-sqljs-driver = { module = "app.cash.sqldelight:sqljs-driver", version.ref = "sqliteDriver" }
+native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelightVersion" }
+sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelightVersion" }
+sqljs-driver = { module = "app.cash.sqldelight:sqljs-driver", version.ref = "sqlDelightVersion" }
 kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
 kstore-storage = { module = "io.github.xxfast:kstore-storage", version.ref = "kstore" }
 kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
@@ -138,8 +135,8 @@ koin-compose-viewmodel-nav = { module = "io.insert-koin:koin-compose-viewmodel-n
 # Plugins for buildSrc see: https://discuss.gradle.org/t/using-version-catalogs-with-precompiled-script-plugins/45417
 gradle-agp = { module = "com.android.tools.build:gradle", version.ref = "agp" } # https://maven.google.com/web/index.html#com.android.tools.build:gradle
 gradle-jetbrainsCompose = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose-plugin" } # https://plugins.gradle.org/plugin/org.jetbrains.compose
-gradle-compose-compiler = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin-compiler" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.compose
-gradle-kotlinMultiplatform = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-compiler" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.multiplatform
+gradle-compose-compiler = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.compose
+gradle-kotlinMultiplatform = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.multiplatform
 gradle-ksp = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" } # https://maven.google.com/web/index.html#com.google.devtools.ksp
 gradle-google-services = { module = "com.google.gms.google-services:com.google.gms.google-services.gradle.plugin", version.ref = "google-services" } # https://maven.google.com/web/index.html#com.google.gms.google-services:com.google.gms.google-services.gradle.plugin
 gradle-kotlinxSerialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" } # https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.serialization
@@ -157,8 +154,8 @@ web-worker-driver = { module = "app.cash.sqldelight:web-worker-driver", version.
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin-compiler" } # https://mvnrepository.com/artifact/org.jetbrains.compose/org.jetbrains.compose.gradle.plugin
-kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin-compiler" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" } # https://mvnrepository.com/artifact/org.jetbrains.compose/org.jetbrains.compose.gradle.plugin
+kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsBuildtools" }
@@ -168,5 +165,5 @@ aboutLibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "abo
 sonarqube = { id = "org.sonarqube", version.ref = "sonarqubeGradlePlugin" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelightPlugin" }
 hot-reload = { id = "org.jetbrains.compose.hot-reload", version.ref = "compose-reload" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-compiler" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 conveyor = { id = "dev.hydraulic.conveyor", version.ref = "conveyorVersion" }
