--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,8 @@ org.jetbrains.compose.experimental.jscanvas.enabled=true
 org.jetbrains.compose.experimental.uikit.enabled=true
 #Gradle Cache
 org.gradle.caching=true
-#org.gradle.configuration-cache=true
+org.gradle.configuration-cache=true
 # Disable some features to help with troubleshooting
 kotlin.native.ignoreDisabledTargets=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
-
+compose.desktop.production=false
