--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,24 +1,15 @@
-version: '3.8'
-
 services:
   gradingscale-web:
     build: .
     container_name: gradingscale-wasmjs
     restart: unless-stopped
-    ports:
-      - "8082:80"  # Change port if needed
     volumes:
       # Optional: Mount for live updates during development
-      # - ./wasmjs-app:/usr/share/nginx/html:ro
+      - ./wasmjs-app:/usr/share/nginx/html:ro
     environment:
       - TZ=UTC
     networks:
       - web
-    labels:
-      # Labels for nginx proxy manager
-      - "traefik.enable=true"
-      - "traefik.http.routers.gradingscale.rule=Host(`gradingscale.yourdomain.com`)"
-      - "traefik.http.services.gradingscale.loadbalancer.server.port=80"
     logging:
       driver: "json-file"
       options:
